[Patch by XForce] Reverted how position/matrix is set/get (now all works again sorry for that) Cleanedup code Some changes to CPool hook (still not work) Added Disable scene streaming when we process our stuff (some crashes related to an invalid entity livery which will be updated by scene streaming)

--- a/Client/Core/Client.Core.vcxproj
+++ b/Client/Core/Client.Core.vcxproj
@@ -349,6 +349,7 @@
     <ClCompile Include="IV\CIVPhysical.cpp" />
     <ClCompile Include="IV\CIVPlayerInfo.cpp" />
     <ClCompile Include="IV\CIVPlayerPed.cpp" />
+    <ClCompile Include="IV\CIVPool.cpp" />
     <ClCompile Include="IV\CIVStreaming.cpp" />
     <ClCompile Include="IV\CIVTask.cpp" />
     <ClCompile Include="IV\CIVTrain.cpp" />
