--- a/Client/Core/Client.Core.vcxproj.filters
+++ b/Client/Core/Client.Core.vcxproj.filters
@@ -753,6 +753,9 @@
     <ClInclude Include="CCrashFixes.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
+    <ClInclude Include="CPatches.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp">
@@ -1227,6 +1230,9 @@
       <Filter>Source Files\Game\IV</Filter>
     </ClCompile>
     <ClCompile Include="CCrashFixes.cpp">
+      <Filter>Source Files\Game</Filter>
+    </ClCompile>
+    <ClCompile Include="CPatches.cpp">
       <Filter>Source Files\Game</Filter>
     </ClCompile>
   </ItemGroup>
